--- a/config/config.yaml
+++ b/config/config.yaml
@@ -14,3 +14,8 @@ data_ingestion:       # This is data ingestion configuration.
   source_url: https://drive.google.com/file/d/1XIAroODvoYEPNA8UwI38x7ZXsOneWRpj/view?usp=drive_link  # We have to give the url of the google drive link of the file uploaded in google drive
   local_data_file : artifacts/data_ingestion/data.zip
   unzip_dir: artifacts/data_ingestion/Data
+
+prepare_base_model:
+  root_dir: artifacts/prepare_base_model
+  base_model_path: artifacts/prepare_base_model/base_model.h5
+  updated_base_model_path: artifacts/prepare_base_model/updated_base_model.h5
